ajuste settings css

--- a/front/static/css/style.css
+++ b/front/static/css/style.css
@@ -41,9 +41,9 @@ body {
     background-color: transparent; /* Fundo TRANSPARENTE para mostrar o amarelo */
 }
 
-.logo {
+/*.logo {
     /* Ocupa o espaço necessário para a imagem */
-}
+/*}
 
 /* ESTILO PARA O LOGO (IMAGEM) */
 .logo img {
