ajuste config para rodar css

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -16,7 +16,7 @@
 
         <header class="cabecalho">
             <div class="logo">
-                <img src="assets/logo_caramelo.png" alt="Instituto Caramelo 10 anos Logo">
+                <img src="{% static 'logo_caramelo.png' %}" alt="Instituto Caramelo 10 anos Logo">
             </div>
             <nav class="menu-principal">
                 <ul>
