--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -35,7 +35,7 @@
                     <input type="text" name="nome" placeholder="Nome:">
                     <input type="text" name="cidade" placeholder="Cidade:">
                     <input type="text" name="representante" placeholder="Representante:">
-                    <input type="text" name="idade" placeholder="Idade da ong:">
+                    <input type="text" name="CNPJ" placeholder="CNPJ:">
                     <textarea name="motivacao" placeholder="Motivação:"></textarea>
                 </form>
             </div>
