--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -40,6 +40,9 @@
                     <textarea name="motivacao" placeholder="Motivação:"></textarea>
 
                     <button type="submit" class="enviar">Enviar</button>
+                   {% if mensagem %}
+                        <p class="msg-sucesso">{{ mensagem }}</p>
+                    {% endif %}
                 </form>
             </div>
         </section>
