--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -8,6 +8,7 @@
     <title>Instituto Caramelo - Cadastro e Resgates</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             </div>
             <nav class="menu-principal">
                 <ul>
-                    <li><a href="#">Parceiros</a></li>
+                    <li><a href="{% url 'parceiros' %}">Parceiros</a></li>
                     <li><a href="#">Quem somos</a></li>
                 </ul>
             </nav>
