--- a/front/facaumadoacao/style.css
+++ b/front/facaumadoacao/style.css
@@ -1,5 +1,5 @@
 :root {
-  --laranja-principal: #FBC638; /* mesmo tom da página inicial */
+  --laranja-principal: #FBC638;
   --preto-texto: #333333;
   --branco-fundo: #FFFFFF;
   --fonte-principal: 'Poppins', sans-serif;
@@ -18,7 +18,6 @@ body {
   line-height: 1.6;
 }
 
-/* TOPO */
 .top-bar-wrapper {
   width: 100%;
   background-color: var(--laranja-principal);
@@ -38,6 +37,8 @@ body {
   height: 80px;
   width: auto;
   display: block;
+  /* garante que fique à esquerda */
+  float: left;
 }
 
 .menu-principal ul {
@@ -58,7 +59,6 @@ body {
   color: var(--preto-texto);
 }
 
-/* SEÇÃO DE DOAÇÃO */
 .doacao {
   background-color: var(--branco-fundo);
   padding: 60px 0;
@@ -135,7 +135,7 @@ textarea {
   background-color: #555;
 }
 
-/* Valores sugeridos */
+
 .valores-sugeridos {
   display: flex;
   justify-content: center;
