--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -34,11 +34,11 @@
                 <h2>Cadastre sua ONG</h2>
                 <form method="POST" action= "{% url 'registrar_ong' %}">
                     {% csrf_token %}
-                    <input type="text" name="nome" placeholder="Nome:">
-                    <input type="text" name="cidade" placeholder="Cidade:">
-                    <input type="text" name="representante" placeholder="Representante:">
-                    <input type="text" id = "cnpj" name="CNPJ" placeholder="CNPJ:" maxlength="18">
-                    <textarea name="motivacao" placeholder="Motivação:"></textarea>
+                    <input type="text" name="nome" placeholder="Nome:" required>
+                    <input type="text" name="cidade" placeholder="Cidade:" required>
+                    <input type="text" name="representante" placeholder="Representante:" required>
+                    <input type="text" id = "cnpj" name="CNPJ" placeholder="CNPJ:" maxlength="18" required>
+                    <textarea name="motivacao" placeholder="Motivação:" required></textarea>
 
                     <button type="submit" class="enviar">Enviar</button>
                    {% if mensagem %}
